--- a/styles.css
+++ b/styles.css
@@ -902,7 +902,7 @@ h5{
 
 .qualitywork-pic{
     max-width: 100%;
-    height: 320px;
+    height: auto;
     border-style: solid;
     border-color: rgb(226, 232, 240);
     border-width: 1px;
@@ -942,7 +942,7 @@ h5{
 
 .steps-pic{
     width: 640px;
-    height: 320px;
+    height: auto;
 }
 
 .steps-text-column{
